# LLMforScheduler

./: .gitignore  README.md
agent_workpacks/: CONTEXT_MANIFEST.json  CURRENT_TASK.md  README.md
checker/: check_schedule.py  check_schedule.py.bak_20260618_160822  check_schedule.py.bak_20260626_machine_capacity  machine_fixed_check_summary_strict.json  sample9_after_batched_cpsat_summary_20260618.json  sample9_after_solver_opt_summary.json  sample_10min_check_summary.json  sample_10min_check_summary_base.json  sample_10min_check_summary_strict.json  sample_docs_semantics_check_summary_20260618_160830.json
deploy/: README.md  pyproject.toml
deploy/examples/: request_en.json  request_zh.json
deploy/llm_scheduler/: __init__.py  api.py
deploy/llm_scheduler/core/: __init__.py  schedule_solver.py  verify_schedule.py
deploy/tests/: test_public_api.py
docs/: task.md
paper/: aaai2026_chinese_draft.md
raw_orders/: SO-2020-10-0002-2.json  SO-2020-11-0001-2.json  SO-2020-12-0002-2.json  SO-2020-12-0003-2.json  SO-2020-12-0005-2.json  SO-2020-12-0007-2.json  SO-2020-12-0010-2.json  SO-2020-12-0011-2.json  SO-2020-12-0013-2.json  SO-2020-12-0016-2.json  SO-2020-12-0018-2.json  SO-2021-01-0008-2.json  SO-2021-01-0016-2.json  SO-2021-01-0019-2.json  SO-2021-01-0021-2.json  SO-2021-02-0004-2.json  SO-2021-02-0008-2.json  SO-2021-02-0012-2.json  SO-2021-02-0018-2.json  SO-2021-02-0021-2.json  SO-2021-03-0001-2.json  SO-2021-03-0007-2.json  SO-2021-03-0014-2.json  SO-2021-03-0015-2.json  SO-2021-03-0018-2.json  SO-2021-03-0021-2.json  SO-2021-03-0026-2.json  (+614 more)
(+16120 files in other folders)
