[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-for-scheduler"
version = "0.1.0"
description = "Verifier-backed industrial scheduling package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ortools==9.15.6755"]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.setuptools]
packages = ["llm_scheduler", "llm_scheduler.core"]
